<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Menu">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo4"
        android:textColor="@color/azul"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="12dp" />

    <Button
        android:id="@+id/_yipos"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/titulo3"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="122dp"
        android:layout_marginTop="35dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/titulo5"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="281dp"
        android:layout_marginTop="35dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btn_met"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/titulo6"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="429dp"
        android:layout_marginTop="35dp"
        android:layout_gravity="center"/>
</LinearLayout>