<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ReciclaApp">

    <TextView
        android:text="@string/titulo3"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:textColor="@color/azul"
        />

    <TextView
        android:id="@+id/txt_org"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:fontFamily="casual"
        android:text="@string/titulo15"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.412"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/img_11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.445"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="91dp" />
    <Button
        android:id="@+id/btn_ver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="295dp"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:fontFamily="casual"
        android:text="@string/titulo14"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="65dp"
        tools:layout_editor_absoluteY="365dp" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/img_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="433dp" />



    <Button
        android:id="@+id/btn_ver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn"/>

</LinearLayout>