<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/txt"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tipos"
   >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="200dp"
        android:layout_height="29dp"
        android:text="@string/titulo9"
        android:textColor="@color/azul"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="14dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="171dp"
        android:layout_height="184dp"
        app:srcCompat="@drawable/img_3"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="57dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"/>
     <Button
         android:text="@string/titulo2"
         android:background="@color/black"
         android:layout_width="115dp"
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
         android:layout_gravity="center"
         />
    <TextView
        android:id="@+id/text_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo10"
        android:textColor="@color/azul"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="269dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="165dp"
        android:layout_height="162dp"
        app:srcCompat="@drawable/img"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="334dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"/>
    <Button
        android:text="@string/titulo2"
        android:background="@color/black"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        />


</LinearLayout>